# onebatch

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
onebatch/: __init__.py  onebatchpam.py  pam.pyx  pam_openmp.pyx
tests/: test_onebatchpam.py
