[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=0.29", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "onebatch"
version = "0.1.0"
description = "OneBatchPAM: A Fast and Frugal K-Medoids Algorithm"
authors = [{name = "Antoine de Mathelin", email = "antoine.demat@gmail.com"}]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.19.0",
    "scikit-learn>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
test = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/antoinedemathelin/onebatch"
Repository = "https://github.com/antoinedemathelin/onebatch"
Issues = "https://github.com/antoinedemathelin/onebatch/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
onebatch = ["*.pyx"]